Cursor to selected missing in snap pie menu on the graph editor. #76596

Closed
opened 2020-05-09 21:16:20 +02:00 by Luciano Muñoz Sessarego · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-08 14:49, hash: ce76e17584

Short description of error
Snapping the 2D cursor in the graph editor only exist where it's less useful , in the "view" n panel. and should be part of the Shift S snap.
Ideally it would be at the left, and then with snap to value on the right they would actually make a killer combo.

Exact steps for others to reproduce the error
No error, it isn't where it should be.

![Capture-Blender_ D__Dropbox_004_lollypopman_Rigify Course_SkinnyPeter_SkinnyPeter_004.b-2020-05-09 20_14_10.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-08 14:49, hash: `ce76e17584` **Short description of error** Snapping the 2D cursor in the graph editor only exist where it's less useful , in the "view" n panel. and should be part of the Shift S snap. Ideally it would be at the left, and then with snap to value on the right they would actually make a killer combo. **Exact steps for others to reproduce the error** No error, it isn't where it should be. ![Capture-Blender_ [D__Dropbox_004_lollypopman_Rigify Course_SkinnyPeter_SkinnyPeter_004.b-2020-05-09 20_14_10.png](https://archive.blender.org/developer/F8523664/Capture-Blender___D__Dropbox_004_lollypopman_Rigify_Course_SkinnyPeter_SkinnyPeter_004.b-2020-05-09_20_14_10.png)
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Sybren A. Stüvel was assigned by Luciano Muñoz Sessarego 2020-05-09 21:16:55 +02:00
Sybren A. Stüvel removed their assignment 2020-05-11 11:33:37 +02:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The "Cursor to Selected" button snaps both the current frame and the cursor value to the current selection. Is this what you'd also expect from the new pie menu option? Or should it only snap the cursor value, and leave the current frame as-is?

The "Cursor to Selected" button snaps both the current frame and the cursor value to the current selection. Is this what you'd also expect from the new pie menu option? Or should it only snap the cursor value, and leave the current frame as-is?

Question #2: adding this new option in place of an already-existing one will mess with people's muscle memory. Is the placement of this new snap operator in the left item of the pie menu really that important? Or can we use one of the two empty spots?

Question #2: adding this new option in place of an already-existing one will mess with people's muscle memory. Is the placement of this new snap operator in the left item of the pie menu really that important? Or can we use one of the two empty spots?
Author
Member

Yes, just like the button that is under the view tab.

But having those other options as a separate thing (would be helpful in some cases too).

Yes, just like the button that is under the view tab. But having those other options as a separate thing (would be helpful in some cases too).
Author
Member

In #76596#1035687, @dr.sybren wrote:
Question #2: adding this new option in place of an already-existing one will mess with people's muscle memory. Is the placement of this new snap operator in the left item of the pie menu really that important? Or can we use one of the two empty spots?

I doubt there is anyone that has created muscle memory for that option, and even less for the top and bottom one, but since we'll re-desing this menu later, lets keep it on one of the empty spots for now and then we'll make the bigger changes for a "bigger release" how does that sound?

> In #76596#1035687, @dr.sybren wrote: > Question #2: adding this new option in place of an already-existing one will mess with people's muscle memory. Is the placement of this new snap operator in the left item of the pie menu really that important? Or can we use one of the two empty spots? I doubt there is anyone that has created muscle memory for that option, and even less for the top and bottom one, but since we'll re-desing this menu later, lets keep it on one of the empty spots for now and then we'll make the bigger changes for a "bigger release" how does that sound?

I doubt there is anyone that has created muscle memory for that option

Why?

Lets keep it on one of the empty spots for now and then we'll make the bigger changes for a "bigger release" how does that sound?

👍

> I doubt there is anyone that has created muscle memory for that option Why? > Lets keep it on one of the empty spots for now and then we'll make the bigger changes for a "bigger release" how does that sound? :+1:
Author
Member

because for just one keyframe it's often faster to click and drag a keyframe to the frame you want to place it in, and given that "snap to closest frame" is a default just sloppily dragging a keyframe where you want it will more often than not give you the desired result.
Instead of having to think " i should place my cursor here, and then select the keyframe and then use the snap menu and then find the option"

But the option has great potential now that we have an "active keyframe" which should be discussed

because for just one keyframe it's often faster to click and drag a keyframe to the frame you want to place it in, and given that "snap to closest frame" is a default just sloppily dragging a keyframe where you want it will more often than not give you the desired result. Instead of having to think " i should place my cursor here, and then select the keyframe and then use the snap menu and then find the option" But the option has great potential now that we have an "active keyframe" which should be discussed

This issue was referenced by 5ebdbcafcb

This issue was referenced by 5ebdbcafcb2703f14f33738f1e852e5a3e1ab33a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-10-16 16:46:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76596
No description provided.